--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "dependencies": {
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-query": "^3.39.3",
     "react-router-dom": "5.3.0",
-    "react-scripts": "4.0.3",
     "styled-components": "5.3.3"
   },
   "devDependencies": {
     "concurrently": "6.3.0",
     "joi": "17.4.2",
     "json-server": "0.17.0",
+    "react-scripts": "^5.0.1",
     "sass": "1.43.4"
   },
   "scripts": {
