--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "styled-components": "5.3.3"
   },
   "devDependencies": {
+    "@tanstack/react-query": "^4.33.0",
     "concurrently": "6.3.0",
     "joi": "17.4.2",
     "json-server": "0.17.0",
